# PKB

./: .env.example  .gitignore  README.md  rag_search_coverage.md  requirements.txt
Abzalov_Igor/: .env.example  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  TESTING_README.md  architecture.md  make.cmd
Benuni_George/: Пример проекта.docx  Текст Пайплайн.docx
Documents_Pipeline/: readme.md
backend/rag_builder_service/: Makefile  README.md  pyproject.toml
backend/rag_builder_service/examples/: build_request_document3_example.json
backend/rag_builder_service/src/rag_builder/chunking/: service.py
backend/rag_builder_service/src/rag_builder/core/: logging.py
backend/rag_builder_service/src/rag_builder/models/: domain.py
backend/rag_builder_service/tests/unit/: test_embeddings_openai.py
backend/rag_search_service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/rag_search_service/app/: __init__.py  config.py  main.py
backend/rag_search_service/app/api/: __init__.py  router.py
backend/rag_search_service/app/api/v1/: __init__.py  health.py  search.py
backend/rag_search_service/app/core/: __init__.py  database.py  logging.py  middleware.py
backend/rag_search_service/app/core/embeddings/: __init__.py  base.py  factory.py  hf_provider.py  openai_provider.py
backend/rag_search_service/app/core/search/: __init__.py  dense.py  hybrid.py  rrf.py  sparse.py
backend/rag_search_service/app/models/: __init__.py  request.py  response.py
backend/rag_search_service/migrations/: init_schemas.sql  seed_data.sql
backend/rag_search_service/scripts/: generate_full_seed.py  generate_seed_embeddings.py  test_search.py
backend/rag_search_service/tests/: conftest.py
backend/rag_search_service/tests/integration/: test_api_search.py  test_search.py
backend/rag_search_service/tests/unit/: __init__.py  test_embeddings.py  test_retry_fallback.py  test_rrf.py
(+592 files in other folders)
