[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-builder-service"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.5.2",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.30.0",
  "pgvector>=0.3.6",
  "httpx>=0.27.0",
  "loguru>=0.7.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "ruff>=0.5.0"
]

[tool.pytest.ini_options]
addopts = "-q --cov=src/rag_builder --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
