[project]
name = "rag-search-service"
version = "0.1.0"
description = "RAG Search microservice — hybrid chunk search (dense + sparse + RRF)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "asyncpg==0.30.0",
    "pgvector==0.3.6",
    "numpy==2.1.2",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "sentence-transformers==3.2.1",
    "tenacity==9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "ruff==0.7.1",
    "mypy==1.13.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
plugins = ["pydantic.mypy"]